unpackaged/main/default/objects/qADAM_Questionnaire__c/qADAM_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>qADAM Questionnaire</label>
    <nameField>
        <displayFormat>qAQ-{000000}</displayFormat>
        <label>qADAM Questionnaire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>qADAM Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>