unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Experience_of_speaking_with_Clinician__c.field-meta.xml
<CustomField>
    <fullName>Experience_of_speaking_with_Clinician__c</fullName>
    <label>Experience of speaking with Clinician</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My side effects have been resolved</fullName>
            </value>
            <value>
                <fullName>They have improved</fullName>
            </value>
            <value>
                <fullName>They are the same (don&#39;t need support)</fullName>
            </value>
            <value>
                <fullName>They are the same (need support)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>