unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Experienced_side_effects__c.field-meta.xml
<CustomField>
    <fullName>Experienced_side_effects__c</fullName>
    <label>Experienced side effects?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I haven&#39;t started yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>