unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Frequency_of_Side_Effects__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Side_Effects__c</fullName>
    <label>Frequency of Side Effects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rarely</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
            <value>
                <fullName>Frequently</fullName>
            </value>
            <value>
                <fullName>Constantly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>