unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Months_Since_Treatment_Start__c.field-meta.xml
<CustomField>
    <fullName>Months_Since_Treatment_Start__c</fullName>
    <label>Months Since Treatment Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>