unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Necessitated_Hospital_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Necessitated_Hospital_Treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necessitated Hospital Treatment?</label>
    <type>Checkbox</type>
</CustomField>