unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Overall_Health_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Health_Rating__c</fullName>
    <label>Overall Health Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>