unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>qADAM Questionnaires</relationshipLabel>
    <relationshipName>qADAM_Questionnaires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>