unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Q10_Height_Lost_Rating__c.field-meta.xml
<CustomField>
    <fullName>Q10_Height_Lost_Rating__c</fullName>
    <description>How much height have you lost?
1 (2&quot; or more), 2 (1.5-1.9&quot;), 3 (1-1.4&quot;), 4 (0.5-0.9&quot;), 5 (none - 0.4&quot;)</description>
    <inlineHelpText>How much height have you lost?
1 (2&quot; or more), 2 (1.5-1.9&quot;), 3 (1-1.4&quot;), 4 (0.5-0.9&quot;), 5 (none - 0.4&quot;)</inlineHelpText>
    <label>Q10 Height Lost Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>