unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Q2_Energy_Rating__c.field-meta.xml
<CustomField>
    <fullName>Q2_Energy_Rating__c</fullName>
    <description>How would you rate your energy level?
1 (terrible), 2 (poor), 3 (average), 4 (good), 5 (excellent)</description>
    <inlineHelpText>How would you rate your energy level?
1 (terrible), 2 (poor), 3 (average), 4 (good), 5 (excellent)</inlineHelpText>
    <label>Q2 Energy Level Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>