unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Q3_Strength_Endurance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Q3_Strength_Endurance_Rating__c</fullName>
    <description>How would you rate your strength/endurance?
1 (terrible), 2 (poor), 3 (average), 4 (good), 5 (excellent)</description>
    <inlineHelpText>How would you rate your strength/endurance?
1 (terrible), 2 (poor), 3 (average), 4 (good), 5 (excellent)</inlineHelpText>
    <label>Q3 Strength/Endurance Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>