unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Q4_Life_Enjoyment_Rating__c.field-meta.xml
<CustomField>
    <fullName>Q4_Life_Enjoyment_Rating__c</fullName>
    <description>How would you rate your enjoyment of life?
1 (terrible), 2 (poor), 3 (average), 4 (good), 5 (excellent)</description>
    <inlineHelpText>How would you rate your enjoyment of life?
1 (terrible), 2 (poor), 3 (average), 4 (good), 5 (excellent)</inlineHelpText>
    <label>Q4 Life Enjoyment Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>