unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Q6_Erection_Strength_Rating__c.field-meta.xml
<CustomField>
    <fullName>Q6_Erection_Strength_Rating__c</fullName>
    <description>How strong are your erections?
1 (extremely weak) - 5 (extremely strong)</description>
    <inlineHelpText>How strong are your erections?
1 (extremely weak) - 5 (extremely strong)</inlineHelpText>
    <label>Q6 Erection Strength Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>