unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Q7_Work_Performance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Q7_Work_Performance_Rating__c</fullName>
    <description>How would you rate your work performance over the past 4 weeks?
1 (terrible), 2 (poor), 3 (average), 4 (good), 5 (excellent)</description>
    <inlineHelpText>How would you rate your work performance over the past 4 weeks?
1 (terrible), 2 (poor), 3 (average), 4 (good), 5 (excellent)</inlineHelpText>
    <label>Q7 Work Performance Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>