unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Q8_Falling_Asleep_Rating__c.field-meta.xml
<CustomField>
    <fullName>Q8_Falling_Asleep_Rating__c</fullName>
    <description>How often do you fall asleep after dinner?
1 (every night), 2 (5-6x week), 3 (3-4x week), 4 (1-2x week), 5 (never)</description>
    <inlineHelpText>How often do you fall asleep after dinner?
1 (every night), 2 (5-6x week), 3 (3-4x week), 4 (1-2x week), 5 (never)</inlineHelpText>
    <label>Q8 Falling Asleep Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>