unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/qADAM_Score__c.field-meta.xml
<CustomField>
    <fullName>qADAM_Score__c</fullName>
    <description>Calculated qADAM score between 10 and 50, with 10 being most symptomatic and 50 being least symptomatic</description>
    <formula>Q1_Libido_Rating__c  +  Q2_Energy_Rating__c  +  Q3_Strength_Endurance_Rating__c  +  Q4_Life_Enjoyment_Rating__c  +  Q5_Happiness_Rating__c  +  Q6_Erection_Strength_Rating__c  +  Q7_Work_Performance_Rating__c  +  Q8_Falling_Asleep_Rating__c  +  Q9_Sports_Ability_Rating__c  +  Q10_Height_Lost_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated qADAM score between 10 and 50, with 10 being most symptomatic and 50 being least symptomatic</inlineHelpText>
    <label>qADAM Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>