unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Severity_of_Side_Effects__c.field-meta.xml
<CustomField>
    <fullName>Severity_of_Side_Effects__c</fullName>
    <label>Severity of Side Effects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>