unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Side_Effects__c.field-meta.xml
<CustomField>
    <fullName>Side_Effects__c</fullName>
    <label>Side Effects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>