unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Side_Effects_Stopped_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Side_Effects_Stopped_Treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Side Effects Stopped Treatment?</label>
    <type>Checkbox</type>
</CustomField>