unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Spoken_with_Clinician_Re_Side_Effects__c.field-meta.xml
<CustomField>
    <fullName>Spoken_with_Clinician_Re_Side_Effects__c</fullName>
    <label>Spoken with Clinician Re Side Effects?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No, but I spoke with a clinician outside Optimale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>