unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Treatment</fullName>
            </value>
            <value>
                <fullName>Post-Treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>