unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Typeform_URL__c.field-meta.xml
<CustomField>
    <fullName>Typeform_URL__c</fullName>
    <label>Typeform URL</label>
    <type>Url</type>
</CustomField>