unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Were_any_adjustments_made__c.field-meta.xml
<CustomField>
    <fullName>Were_any_adjustments_made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Were any adjustments made?</label>
    <type>Checkbox</type>
</CustomField>