unpackaged/main/default/objects/qADAM_Questionnaire__c/fields/Would_you_like_Contact_re_Side_Effects__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_Contact_re_Side_Effects__c</fullName>
    <label>Would you like Contact re Side Effects?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No, except if a clinician needs to discuss something with me</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>