unpackaged/main/default/objects/qADAM_Questionnaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>qADAM_Score__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Typeform_URL__c</columns>
    <columns>Stage__c</columns>
    <columns>Would_you_like_Contact_re_Side_Effects__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>